Added support for handling error messages correctly in Status.

--- a/idp/src/main/resources/messages/messages_sv.properties
+++ b/idp/src/main/resources/messages/messages_sv.properties
@@ -1,57 +1,13 @@
-# In addition to the Apache 2.0 license, this content is also licensed
-# under the Creative Commons Attribution-ShareAlike 3.0 Unported license
-# (see http://creativecommons.org/licenses/by-sa/3.0/). 
-
-# This is the as-delivered set of messages used in various views
-# so that internationalized translations can be made available and
-# so administrators can locally override or supplement the values
-# in their own message files.
 
 
-# Event/Exception to error key mappings, not messages per se, but used
-# in the example error view to support groupings of error behavior.
+cancel-authn.title = Avbruten legitimering
+cancel-authn.message = Inloggningen avbröts.
 
-AccessDenied = access
-ContextCheckDenied = context-check-denied
-EndpointResolutionFailed = endpoint
-InvalidProfileConfiguration = relying-party
-InvalidSecurityConfiguration = security-cfg
-MessageAuthenticationError = security-msg
-MessageReplay = stale
-MessageExpired = stale
-UnableToDecode = stale
-AccountError = authn
-AuthenticationException = authn
-InvalidCredentials = authn
-NoCredentials = authn
-NoPotentialFlow = authn
-RequestUnsupported = authn
-SubjectCanonicalizationError = authn
-InvalidAttributeContext = unexpected
-InvalidAuthenticationContext = unexpected
-InvalidSubjectContext = unexpected
-InvalidSubjectCanonicalizationContext = unexpected
-InvalidMessageContext = unexpected
-InvalidMessageVersion = unexpected
-InvalidProfileContext = unexpected
-InvalidRelyingPartyContext = unexpected
-InvalidRelyingPartyConfiguration = unexpected
-MessageProcessingError = unexpected
-UnableToEncode = unexpected
-UnableToSign = unexpected
-UnableToEncrypt = unexpected
-AttributeReleaseRejected = no-release
-TermsRejected = no-terms
-RuntimeException = runtime-error
-UnknownUsername = bad-username
-InvalidPassword = bad-password
-ExpiredPassword = expired-password
-AccountLocked = account-locked
-SPNEGONotAvailable = spnego-unavailable
-NTLMUnsupported = ntlm
-NoSuchFlowExecutionException = stale
-FlowExecutionRestorationFailureException = stale
-ExternalAuthenticationException = stale
+fraud.title = Säkerhetsmeddelande
+fraud.message = Ett bedrägligt inloggningsförsök har detekterats. Legitimeringen avvisades.
+                
+possible-fraud.title = Säkerhetsmeddelande
+possible-fraud.message = Legitimeringstjänsten har detekterat ett misstänkt inloggningsförsök. Legitimeringen avbruten.
 
 # General strings
 
@@ -97,7 +53,7 @@ idp.login.duoCancel = Avbryt begäran
 idp.login.expiringSoon = Ditt lösenord löper snart ut!
 idp.login.changePassword = För att skapa ett nytt lösenord, gå till
 idp.login.proceedBegin = Din inloggning fortsätter inom 20 sekunder. Du kan också klicka
-idp.login.proceedHere = häre
+idp.login.proceedHere = här
 idp.login.proceedEnd = för att fortsätta
 
 # Useful links
@@ -268,5 +224,5 @@ runtime-error.message = <p>A software error was encountered that prevents normal
                          <p>Please report this problem to your Help Desk or administrative staff. It has \
                          also been logged for an administrator to review.</p>
 
-error.title = Error
-error.message = An error occurred: $eventId
+error.title = Fel
+error.message = Ett fel inträffade: $eventId
