Error handling and translation.

--- a/idp/src/main/resources/messages/messages.properties
+++ b/idp/src/main/resources/messages/messages.properties
@@ -7,18 +7,26 @@
 CancelAuthn = cancel-authn
 Fraud = fraud
 PossibleFraud = possible-fraud
+SignMessageDecryptionError = sign-message-decryption-error
+SignMessageTypeNotSupported=sign-message-unsupported-mimetype
 
 # Error key to title and message mappings
 
 # Will generelly never be displayed
 cancel-authn.title = Cancelled authentication
-cancel-authn.message = The login attempt was cancelled.
+cancel-authn.message = The login attempt was cancelled
 
 fraud.title = Security Message
 fraud.message = A fraudlent login attempt has been detected. \
-                The authentication is rejected.
+                The authentication is rejected
                 
 possible-fraud.title = Security Message
 possible-fraud.message = The Identity Provider has detected that the login attempt may be fraudlent. \
-                         The authentication will not proceed.
+                         The authentication will not proceed
+                         
+sign-message-decryption-error.title = Security Message
+sign-message-decryption-error.message = The supplied SignMessage could not be decrypted
+
+sign-message-unsupported-mimetype.title = Unsupported Request
+sign-message-unsupported-mimetype.message = The requested MIME type for displaying of SignMessage is not supported
 
