END-51 Added core support for the Signature Activation Protocol.

--- a/idp/src/main/resources/messages/messages_sv.properties
+++ b/idp/src/main/resources/messages/messages_sv.properties
@@ -15,6 +15,12 @@ sign-message-decryption-error.message = Signeringsmeddelandet kunde inte dekrypt
 sign-message-unsupported-mimetype.title = S\u00e4kerhetsmeddelande
 sign-message-unsupported-mimetype.message = Den beg\u00e4rda typen f\u00f6r visning av signeringsmeddelandet hanteras inte av legitimeringstj\u00e4nsten
 
+sweid-bad-request.title = Beg\u00e4ran st\u00f6ds inte
+sweid-bad-request.message = Legitimeringsbeg\u00e4ran m\u00f6ter inte kraven f\u00f6r g\u00e4llande tekniskt ramverk 
+
+bad-sad-request.title = S\u00e4kerhetsmeddelande
+bad-sad-request.message = Beg\u00e4ran av SAD \u00e4r inte korrekt 
+
 # General strings
 
 idp.title = Logintj\u00e4nsten
