--- a/idp/src/main/resources/messages/messages.properties
+++ b/idp/src/main/resources/messages/messages.properties
@@ -9,6 +9,8 @@ Fraud = fraud
 PossibleFraud = possible-fraud
 SignMessageDecryptionError = sign-message-decryption-error
 SignMessageTypeNotSupported=sign-message-unsupported-mimetype
+SwEidBadRequest=sweid-bad-request
+BadSadRequest=bad-sad-request
 
 # Error key to title and message mappings
 
@@ -30,3 +32,8 @@ sign-message-decryption-error.message = The supplied SignMessage could not be de
 sign-message-unsupported-mimetype.title = Unsupported Request
 sign-message-unsupported-mimetype.message = The requested MIME type for displaying of SignMessage is not supported
 
+sweid-bad-request.title = Unsupported Request
+sweid-bad-request.message = The request does not meet the requirements of the Swedish eID Framework
+
+bad-sad-request.title = Security Message
+bad-sad-request.message = The request for SAD is not valid
