--- a/shibboleth-base/idp/src/main/resources/messages/messages.properties
+++ b/shibboleth-base/idp/src/main/resources/messages/messages.properties
@@ -11,11 +11,12 @@ SignMessageDecryptionError = sign-message-decryption-error
 SignMessageTypeNotSupported=sign-message-unsupported-mimetype
 SwEidBadRequest=sweid-bad-request
 BadSadRequest=bad-sad-request
+MissingClientTlsCertificate=missing-client-cert
 
 # Error key to title and message mappings
 
 # Will generelly never be displayed
-cancel-authn.title = Cancelled authentication
+cancel-authn.title = Canceled authentication
 cancel-authn.message = The login attempt was cancelled
 
 fraud.title = Security Message
@@ -37,3 +38,6 @@ sweid-bad-request.message = The request does not meet the requirements of the Sw
 
 bad-sad-request.title = Security Message
 bad-sad-request.message = The request for SAD is not valid
+
+missing-client-cert.title = Login Failed
+missing-client-cert.message = In order to authenticate a valid certificate needs to be presented
