--- a/shibboleth-base/idp/src/main/resources/messages/messages_sv.properties
+++ b/shibboleth-base/idp/src/main/resources/messages/messages_sv.properties
@@ -21,6 +21,9 @@ sweid-bad-request.message = Legitimeringsbeg\u00e4ran m\u00f6ter inte kraven f\u
 bad-sad-request.title = S\u00e4kerhetsmeddelande
 bad-sad-request.message = Beg\u00e4ran av SAD \u00e4r inte korrekt 
 
+missing-client-cert.title = Inloggningen misslyckades
+missing-client-cert.message = F\u00f6r att legitimera dig m\u00e5ste du presentera ett giltigt certifikat
+
 # General strings
 
 idp.title = Logintj\u00e4nsten
